--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="Images/favicon.png">
+    <title>Sri Lanka Cricket Facts</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <meta name="description" content="Fun facts about Sri Lanka Cricket. Discover amazing trivia about Sri Lanka's cricket achievements and history.">
 </head>
 <body>
-    <div class="container">
+    <header class="header">
         <h1>Sri Lanka Cricket: Did You Know?</h1>
+    </header>
+    <div class="container">
         <main>
             <div class="card">
-                <p id="fact">Sri Lanka won their first and only ICC Cricket World Cup in 1996.</p>
+                <p id="fact" aria-live="polite">Sri Lanka won their first and only ICC Cricket World Cup in 1996.</p>
             </div>
             <button onclick="generateRandomFact()">Generate New Fact</button>
         </main>
     </div>
     <footer>
-        <p>&copy; 2024 Sri Lanka Cricket Facts</p>
+        <p>&copy; 2024 Sri Lanka Cricket Facts | Designed by Sinel</p>
     </footer>
 </body>
 </html>
